(lang dune 3.4)

(name project_euler)

(generate_opam_files true)

(source
 (github vrama628/project_euler))

(authors "Vijay Ramamurthy")

(license LICENSE)

(package
 (name project_euler)
 (synopsis "Project Euler")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
